<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_pin">Pin</string>
    <string name="action_del">Delete</string>
    <string name="action_deleteForever">Delete forever</string>
    <string name="action_restore">Restore</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_calendar">Calendar</string>
    <string name="bottom_school">School</string>
    <string name="bottom_setting">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="change_password_button">Change Password</string>
    <string name="btnSearch">Search</string>
    <string name="ed_search">  Input to search</string>
    <string name="languages">Language</string>

    <string name="bot_home">Home</string>
    <string name="bot_calendar">Calendar</string>
    <string name="bot_school">School</string>
    <string name="bot_settings">Settings</string>

    <string name="dialog_language">English</string>
    <string name="note_belong">Private Note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sort_options">
        <item>Sort by Created Time</item>
        <item>Sort by Modified Time</item>
    </string-array>
</resources>