<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_trash"
                android:icon="@drawable/ic_menu_trash"
                android:title="@string/menu_trash" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>