<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/picture">

    <TextView
        android:id="@+id/languages"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:id="@+id/showlangdialog"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/custombtn"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/custombtn"
            android:dropDownVerticalOffset="35dp"
            android:popupBackground="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/dialog_language"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/drop" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="178dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:background="#BA8B8B"
        app:cornerRadius="15dp"
        android:orientation="horizontal">



        <Switch
            android:id="@+id/switch_button"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:thumbTint="#0D1853"
            android:trackTint="@color/red"
            android:text=""
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#55653C"
            android:text="@string/change_password_button"
            app:cornerRadius="15dp" />

    </LinearLayout>

</LinearLayout>